third_party/move/move-compiler-v2/tests/more-v1/parser/match_neg_variable.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/match_neg_variable.move:4:13
  │
4 │             -x => x,
  │             ^
  │             │
  │             Unexpected '-'
  │             Expected a variable or struct or variant name
