third_party/move/move-compiler-v2/tests/more-v1/parser/match_neg_variable.move
module 0xc0ffee::m {
    fun neg_var(x: i8): i8 {
        match (x) {
            -x => x,
            _ => 0,
        }
    }
}
